# perry

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  run_parity_tests.sh
crates/perry-ext-google-auth/: Cargo.toml
crates/perry-ext-google-auth/src/: lib.rs
crates/perry-ext-nanoid/: Cargo.toml
crates/perry-ext-pg/: Cargo.toml
crates/perry-ext-pg/src/: lib.rs
crates/perry-ui-gtk4/: Cargo.toml
crates/perry-ui-gtk4/src/: app.rs  audio.rs  issue_552_stub.rs  keyboard.rs  lib.rs  state.rs
crates/perry-ui-gtk4/src/ffi/: clipboard_dialog_events.rs  layout.rs
crates/perry-ui-gtk4/src/widgets/: bottom_nav.rs  calendar.rs  canvas.rs  chart.rs  command_palette.rs  image.rs  image_gallery.rs  map_view.rs  mod.rs  rich_text.rs  rich_tooltip.rs  scrollview.rs  text_registry.rs  toast.rs  tree_view.rs  webview.rs
docs/: runtime-parity-gaps.md  runtime-parity.md
docs/api/: perry.d.ts
scripts/: check_file_size.sh  compiler_output_regression.py  native_abi_evidence_packet.sh  native_abi_evidence_report.py  node_core_subset.py  parity-skiplist.toml  parity_gap_report.py  release_sweep_lib.sh  run_doc_tests.sh  run_fastify_tests.sh  run_memory_stability_tests.sh  run_simctl_tests.sh  run_thread_tests.sh  run_ui_styling_matrix.sh
test-compat/: parity_gaps_report.json
test-coverage/: COVERAGE.md  audit.sh  regen_ts_surface_inventory.py
test-files/: dynamic_import_deferred_marker.ts  test_compat_core_surface.ts  test_cross_module_ctor_assign.ts  test_crypto_subtle_generateKey.ts  test_date_fns_format.ts  test_default_import_as_value.ts  test_default_import_as_value_helper.ts  test_ffi_surface_runtime_core.ts  test_ffi_surface_runtime_ui.ts  test_ffi_surface_stdlib_core.ts  test_ffi_surface_stdlib_integrations.ts  test_ffi_surface_stdlib_io.ts  test_gap_2308_unrolled_loop_var.ts  test_gap_2371_console_invalid_date.ts  test_gap_2442_object_literal_accessors.ts  test_gap_2530_nonnull_update.ts  test_gap_3054_3055_url_arg_coercion.ts  test_gap_3149_object_coerce.ts  test_gap_3716_uncurry_this.ts  test_gap_4099_map_set_accessor_corruption.ts  test_gap_4100_primitive_proto_brand_check.ts  test_gap_4461_class_expr_var_value.ts  test_gap_array_splice_dispatch.ts  test_gap_bind_replace_2840_2867.ts  test_gap_class_field_named_stack_index.ts  test_gap_console_bare_global.ts  test_gap_console_validate_write.ts  test_gap_cross_module_arguments.ts  test_gap_default_param_tdz.ts  test_gap_dynamic_import_deferred.ts  test_gap_escape_unescape_global_4511.ts  test_gap_fetch_response.ts  test_gap_json_instanceof_2900_2909.ts  test_gap_map_set_entries_dispatch.ts  test_gap_mapset_iter_2831_2830_2856.ts  test_gap_module_const_local_shadow.ts  test_gap_namespace_member_not_array_method.ts  test_gap_node_module_3118plus.ts  test_gap_node_v8_3137plus.ts  test_gap_object_create_chain_symbol.ts  (+42 more)
test-parity/: known_failures.json
tests/: test_c262_assignment_parity.sh  test_c_layout_pod_records.sh  test_compiler_output_regression.py  test_effect_number_isfinite_property_path.sh  test_issue_4120_math_random_bind.sh  test_issue_4150_array_property_index_set.sh  test_issue_4150_derived_constructor_arrow_new.sh  test_issue_4150_new_array_index_set.sh  test_native_abi_contract.sh  test_native_abi_evidence_packet_smoke.sh  test_native_abi_evidence_report.py  test_native_library_no_stubs.sh  test_typed_feedback_runtime_evidence.py  test_wasm_runtime.sh  typed_feedback_runtime_evidence.ts
(+1413 files in other folders)
