[package]
name = "perry-ext-nanoid"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native bindings for the npm `nanoid` package — uses only `perry-ffi`. Second port under #466 Phase 5 (after dotenv)."

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
perry-ffi.workspace = true
nanoid = "0.5"
rand = "0.9"
