[package]
name = "perry-ext-pg"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native bindings for npm `pg` (PostgreSQL client) — uses only `perry-ffi`. Async via `sqlx::postgres` bridged through spawn_blocking + JsPromise + tokio::Handle::current().block_on. Both pre-connect handles and connection pool surfaces."

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
perry-ffi.workspace = true
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { workspace = true }
